# vaultblob-core

./: .gitignore  Cargo.toml  package-lock.json
.github/workflows/: build-go-native.yml  build-native.yml
.visualizer-output/: encrypted-blob-vault-spec.html
docs/: SPEC.md
go/native/: Cargo.toml  vaultblob.h
go/native/src/: vault_io.rs
go/sdk/: deps.go  go.mod  native_darwin_amd64.go  native_darwin_arm64.go  native_linux_amd64.go  native_linux_arm64.go  native_windows_amd64.go  sdk.go
native/: Cargo.toml  vaultblob.h
native/src/: lib.rs  vault_io.rs
python/: .gitignore  Cargo.toml  pyproject.toml
python/examples/: fastapi_readonly_server.py
python/src/: lib.rs  vault_io.rs
python/tests/: test_cli.py  test_roundtrip.py
python/vaultblob/: __init__.py  __init__.pyi  _native.pyi  cli.py
src/: blob.rs  blob_wrapper.rs  crypto_utils.rs  diag.rs  error.rs  frontmatter.rs  lib.rs  types.rs  vault.rs
